--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             font-size: 2rem;
         }
         .btn:hover{
-            background: black;
-            color: #fff;
+            background: #fff;
+            color: #000;
         }
 
 
